<resources>
    <string name="app_name">CS2340</string>
    <string name="enter_code_message">Enter the code we sent to your email</string>
    <string name="quality_year_label">Year</string>
    <string name="activity_submit_quality_title">Submit Water Quality Report</string>
    <string name="activity_water_source_report_title">Water Source Report</string>
    <string name="activity_welcome_logout_btn">Logout</string>
    <string name="activity_change_password_hint">New Password</string>
    <string name="activity_edit_name_hint">Name</string>
    <string name="activity_registration_name_hint">Name</string>
    <string name="activity_login_username_hint">Email</string>
    <string name="activity_main_welcome">Welcome to our app!</string>
    <string name="activity_edit_email_hint">Email Address</string>
    <string name="activity_registration_username_hint">Username</string>
    <string name="activity_forgot_password_code_hint">Code</string>
    <string name="activity_welcome_edit_profile_btn">Edit Profile</string>
    <string name="activity_report_card_report_id_hint">Report ID: </string>
    <string name="activity_wqr_report_card_report_id_hint">Report ID: </string>
    <string name="activity_quality_graph_virus">VIRUS</string>
    <string name="activity_submit_quality_lat_hint">Location(Latitude)</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_change_password_submit_btn">Submit</string>
    <string name="activity_main_register_btn">Register</string>
    <string name="activity_water_source_report_lat_hint">Location(Latitude)</string>
    <string name="activity_quality_graph_contaminant">CONTAMINANT</string>
    <string name="activity_welcome_submit_wsr">Submit WSR Report</string>
    <string name="activity_edit_home_hint">Home Address</string>
    <string name="activity_registration_password_hint">Password</string>
    <string name="activity_forgot_password_submit_btn">Submit</string>
    <string name="activity_submit_quality_lng_hint">Location(Longitude)</string>
    <string name="activity_login_login_btn">Login</string>
    <string name="activity_welcome_view_wsr">View WSR Reports</string>
    <string name="activity_edit_title">Title</string>
    <string name="activity_report_card_submitter_hint">Submitter: </string>
    <string name="activity_main_login_btn">Login</string>
    <string name="activity_submit_quality_condition">Condition</string>
    <string name="activity_water_source_report_water_type">Water Type</string>
    <string name="activity_edit_name">Name: </string>
    <string name="activity_login_cancel_btn">Cancel</string>
    <string name="activity_welcome_submit_quality_btn">Submit Quality Report</string>
    <string name="activity_edit_email">Email: </string>
    <string name="activity_quality_graph_search">Search</string>
    <string name="activity_registration_account_type">Account Type: </string>
    <string name="safe">Safe</string>
    <string name="bottled">Bottled</string>
    <string name="report_card_location">Location: </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="view_quality_reports">View Quality Reports</string>
    <string name="home_colon">Home:</string>
    <string name="treatable">Treatable</string>
    <string name="well">Well</string>
    <string name="title_colon">Title:</string>
    <string name="quality_graph">Quality Graph</string>
    <string name="unsafe">Unsafe</string>
    <string name="stream">Stream</string>
    <string name="condition_colon">Condition:</string>
    <string name="overall_condition_colon">Overall Condition: </string>
    <string name="user">USER</string>
    <string name="lake">Lake</string>
    <string name="worker">WORKER</string>
    <string name="manager">MANAGER</string>
    <string name="spring">SPRING</string>
    <string name="type_colon">Type: </string>
    <string name="virus_ppm_colon">Virus PPM: </string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="save">Save</string>
    <string name="admin">ADMIN</string>
    <string name="other">Other</string>
    <string name="water_condition">Water Condition</string>
    <string name="contaminant_ppm">Contaminant PPM</string>
    <string name="date_colon">Date: </string>
    <string name="contaminant_ppm_colon">Contaminant PPM:</string>
    <string name="submit_report">Submit Report</string>
    <string name="waste">Waste</string>
    <string name="treatable_muddy">Treatable-Muddy</string>
    <string name="treatable_clear">Treatable-Clear</string>
    <string name="potable">Potable</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>
