<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/activity_water_source_report_title"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="0.10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/latInput"
        android:hint="@string/activity_water_source_report_lat_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/longInput"
        android:hint="@string/activity_submit_quality_lng_hint" />

    <TextView
        android:text="@string/activity_water_source_report_water_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:id="@+id/typeInput"
        android:layout_weight="0.78">

        <RadioButton
            android:text="@string/bottled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/well"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1.74" />

        <RadioButton
            android:text="@string/stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/lake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton6"
            android:layout_weight="1" />

        <TextView
            android:text="@string/water_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1000"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </RadioGroup>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:id="@+id/conditionInput">

        <RadioButton
            android:text="@string/waste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton7"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/treatable_muddy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton8"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/treatable_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton9"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/potable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton10"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/activity_forgot_password_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:onClick="submitClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_cancel_btn"
        android:onClick="cancelClick"/>
</LinearLayout>