<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/name"
        android:hint="@string/activity_registration_name_hint"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/username"
        android:hint="@string/activity_registration_username_hint"
        android:layout_below="@+id/name"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:hint="@string/activity_registration_password_hint"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/password"
        android:hint="@string/activity_edit_email_hint"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/home_address"
        android:layout_below="@+id/email"
        android:hint="@string/activity_edit_home_hint"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:layout_below="@+id/home_address"
        android:hint="@string/activity_edit_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acc_type_label"
        android:layout_below="@+id/title"
        android:text="@string/activity_registration_account_type"
        android:layout_centerHorizontal="true"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_type_label"
        android:id="@+id/acc_type"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:id="@+id/user" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker"
            android:id="@+id/worker"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:id="@+id/manager"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:id="@+id/admin"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_type"
        android:id="@+id/register_button"
        android:onClick="registerClicked"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_main_register_btn"/>


</RelativeLayout>