<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/username"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/activity_login_username_hint"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:hint="@string/activity_login_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:onClick="loginPressed"
        android:text="@string/activity_login_login_btn"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_btn"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:onClick="cancelPressed"
        android:text="@string/activity_login_cancel_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass_btn"
        android:layout_below="@+id/cancel_btn"
        android:layout_centerHorizontal="true"
        android:onClick="forgotPressed"
        android:text="@string/forgot_password"/>

</RelativeLayout>