<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/enter_code_message"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:id="@+id/title"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/activity_forgot_password_code_hint"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/code" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_forgot_password_submit_btn"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:onClick="checkCode"/>

</RelativeLayout>