<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content">
    <TextView
        android:text="Submit Quality Report"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="0.10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/latInput"
        android:hint="@string/activity_water_source_report_lat_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/longInput"
        android:hint="@string/activity_submit_quality_lng_hint" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use Current Location"
        android:id="@+id/current_location"/>

    <TextView
        android:text="@string/activity_water_source_report_water_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:id="@+id/conditionInput">

        <RadioButton
            android:text="Safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton7"
            android:layout_weight="1" />

        <RadioButton
            android:text="Treatable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton8"
            android:layout_weight="1" />

        <RadioButton
            android:text="Unsafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton9"
            android:layout_weight="1" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/virusPPM"
        android:hint="Virus PPM" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/contaminantPPM"
        android:hint="Contaminant PPM" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/activity_forgot_password_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:onClick="submitWQRClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_cancel_btn"
            android:onClick="cancelClick"/>
    </LinearLayout>

</LinearLayout>