<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="https://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_logout_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/profileButton"
        android:id="@+id/logout_button"
        android:onClick="logoutPressed"
        />
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_edit_profile_btn"
        android:id="@+id/profileButton"
        android:onClick="editPressed" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_submit_wsr"
        android:layout_below="@+id/profileButton"
        android:onClick="submitPressed"
        android:id="@+id/submit_btn"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_view_wsr"
        android:layout_below="@+id/submit_btn"
        android:onClick="viewReportPressed"
        android:id="@+id/view_report"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_submit_quality_btn"
        android:layout_below="@+id/logout_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="submitQualityReport"
        android:id="@+id/submitWQR_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_quality_reports"
        android:layout_below="@+id/submitWQR_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="viewQualityReports"
        android:id="@+id/viewWQR_reports"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality_graph"
        android:id="@+id/qualityGraphBtn"
        android:layout_below="@+id/viewWQR_reports"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="qualityGraphClick"/>

    <Button
        android:id="@+id/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_report"
        android:text="Admin"
        android:onClick="adminClick"/>
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_fragment"
        android:layout_alignBaseline="@+id/qualityGraphBtn"
        android:layout_centerHorizontal="true"
        android:name="com.google.android.gms.maps.MapFragment"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit WSR"
                android:padding="5dp"
                android:background="#44000000"
                android:layout_marginBottom="32dp"
                android:textColor="#ffffff"
                android:layout_marginTop="30dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/wsr_fab"
                android:src="@drawable/plus"
                android:onClick="mapSubmitWSR"
                fab:fabSize="mini"
                >
            </android.support.design.widget.FloatingActionButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit WQR"
                android:padding="5dp"
                android:background="#44000000"
                android:layout_marginBottom="32dp"
                android:textColor="#ffffff"
                android:layout_marginTop="30dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/wqr_fab"
                android:src="@drawable/plus"
                android:onClick="mapSubmitWQR"
                fab:fabSize="mini"
                >
            </android.support.design.widget.FloatingActionButton>
            </LinearLayout>
    </LinearLayout>
</RelativeLayout>